# CareerAgent

./: .gitignore  README.md  pyproject.toml
app/: MultiAgentCover.py  agent_jobs_random_link.py  cover_letter_agent_all.py  job_agent_extenction.py  job_compatibility_agent.py  job_details_agent.py  resume_agent.py  streamlit_app.py
app/Tool/: ContentCache.py  CoverLetterToolkit.py  DocumentParserToolkit.py  FileToolkit.py  JobAnalysisToolkit.py  JobCompatibilityToolkit.py  LinkedInJobsToolkit.py  ResumeAnalysisToolkit.py  SingleJobAnalysisToolkit.py  WebScraperToolkit.py
app/multi_agent/: CareerAgentTeamCoordinator.py  MultiAgentCoverLetterAgent.py  MultiAgentJobCompatibilityAgent.py  MultiAgentResumeAnalysisAgent.py  SingleJobAnalysisAgent.py
app/ui/: agent_manager.py  streamlit_cover_letter_tab.py  streamlit_job_compatibility_tab.py  streamlit_job_file_analysis_tab.py  streamlit_job_url_analysis_tab.py  streamlit_linkedin_tab.py  streamlit_resume_tab.py  utils.py
